fix z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -72764,6 +72764,9 @@ textarea.form-control-lg {
   background-color: #dee8f1;
   position: relative;
 }
+.hero .left {
+  z-index: 100;
+}
 .hero .left .separator {
   display: none;
 }
@@ -72779,7 +72782,6 @@ textarea.form-control-lg {
   margin: 2rem 0 1rem 0;
   position: absolute;
   top: 2%;
-  z-index: 100;
 }
 .hero .left h1,
 .hero .left p,
